--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-flair==0.13.0
+flair
 nltk==3.8.1
 dspy-ai==2.1.1
 pandas==2.1.1
 scikit-learn==1.3.2
 chardet==5.2.0
-sentence-transformers==2.2.2
-transformers==4.34.1
+sentence-transformers
+transformers
 scipy==1.10.1
 fastchat
 wikipedia==1.4.0
@@ -16,4 +16,4 @@ tqdm==4.66.0
 httpx
 langchain_text_splitters 
 trafilatura
-huggingface-hub==0.23.4
+huggingface-hub==0.24.5
