--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-flair
+flair==0.14.0
 nltk==3.8.1
 dspy-ai==2.1.1
 pandas==2.1.1
 scikit-learn==1.3.2
 chardet==5.2.0
-sentence-transformers
-transformers
+sentence-transformers==3.0.1
+transformers==4.44.0
 scipy==1.10.1
-fastchat
+fastchat==0.1.0
 wikipedia==1.4.0
 Wikipedia-API==0.6.0
-rouge-score
-toml
+rouge-score==0.1.2
+toml==0.10.2
 tqdm==4.66.0
-httpx
-langchain_text_splitters 
-trafilatura
+httpx==0.27.0
+langchain_text_splitters==0.2.2
+trafilatura==1.12.0
 huggingface-hub==0.24.5
-lxml-html-clean
+lxml-html-clean==0.2.0
